@@ -1,0 +1,16 @@
+<inkscape-extension>
+    <_name>Measure paths</_name>
+    <id>com.njhurst.filter.measure_length</id>
+	<dependency type="executable" location="extensions">measure.py</dependency>
+	<dependency type="executable" location="extensions">inkex.py</dependency>
+	<param name="fontsize" type="string" _gui-text="Font size">20</param>
+    <effect>
+		<object-type>path</object-type>
+                <effects-menu>
+                    <submenu _name="Visualize Path"/>
+                </effects-menu>
+    </effect>
+    <script>
+        <command reldir="extensions" interpreter="python">measure.py</command>
+    </script>
+</inkscape-extension>
